About text has been changed

--- a/index.html
+++ b/index.html
@@ -163,14 +163,11 @@
         <section class="about-text">
           <p>
             Ben Sedat Kavak. Samsun Üniversitesi'nde yazılım mühendisliği öğrencisiyim. 2022'den beri Flutter ve Android
-            ile mobil uygulamalar geliştirmekteyim. Beni çok iyi tanıyan ilkokul öğretmenim Serpil Tural'ın tavsiyesi
-            üzerine yazılım mühendisliği bölümünü tercih ettim.<br><br>
-
-            İşimi en iyi şekilde yapmayı ve ekip arkadaşlarımla birlikte başarı elde etmeyi amaçlayan hırslı bir
-            kişiliğe sahibim. Üstlendiğim her görevde en yüksek standartları tutturmaya özen gösteririm. İnanıyorum ki
-            mutlulukla yapılacak bir iş için, o işe gereken özeni göstermek elzemdir. Aynı zamanda espritüel yönlerimle
-            de barışık bir bireyim ve bu nedenle genellikle günlük hayatta ciddi bir yapıya bürünmem.
-          </p>
+            ile mobil uygulamalar geliştirmekteyim.<br><br>
+            Geliştirdiğim bu mobil uygulamalar Google Play ve App Store'da yer almaktadır.
+            Ayrıca, uygulamalar hakkında detaylı bilgiye<a class="data-nav-link" data-nav-link>Projelerim</a>kısmından ulaşabilirsiniz.<br><br>
+        </p>
+        
         </section>
 
 
