project images have been updated

--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
             Ben Sedat Kavak. Samsun Üniversitesi'nde yazılım mühendisliği öğrencisiyim. 2022'den beri Flutter ve Android
             ile mobil uygulamalar geliştirmekteyim.<br><br>
             Geliştirdiğim bu mobil uygulamalar Google Play ve App Store'da yer almaktadır.
-            Ayrıca, uygulamalar hakkında detaylı bilgiye<a class="data-nav-link" data-nav-link>Projelerim</a>kısmından ulaşabilirsiniz.<br><br>
-        </p>
-        
+            Ayrıca, uygulamalar hakkında detaylı bilgiye<a class="data-nav-link" data-nav-link>Projelerim</a>kısmından
+            ulaşabilirsiniz.<br><br>
+          </p>
+
         </section>
 
 
@@ -388,7 +389,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img height="100px" src="./assets/images/projectYeye.jpg" alt="YeYe" loading="lazy">
+                  <img height="100px" src="./assets/images/projectYeye.png" alt="YeYe" loading="lazy">
                 </figure>
 
                 <h3 class="project-title" data-project-title>YeYe</h3>
@@ -398,7 +399,7 @@
 
                 </h4>
                 <div style="display:none" data-project-content>
-                  <img width="100%" src="./assets/images/yeye-details-1.png" alt="YeYe" loading="lazy">
+                  <img width="100%" src="./assets/images/yeye-details-1.jpg" alt="YeYe" loading="lazy">
                   <br />
                   <h3 class="h3 modal-title">YeYe Nedir?</h3>
                   <p>
@@ -430,7 +431,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img height="100px" src="./assets/images/projectKai.jpg" alt="Kai" loading="lazy">
+                  <img height="100px" src="./assets/images/projectKai.png" alt="Kai" loading="lazy">
                 </figure>
 
                 <h3 class="project-title" data-project-title>Kai</h3>
@@ -439,7 +440,7 @@
 
                 </h4>
                 <div style="display:none" data-project-content>
-                  <img width="100%" src="./assets/images/kai-details-1.png" alt="Kai" loading="lazy">
+                  <img width="100%" src="./assets/images/kai-details-1.jpg" alt="Kai" loading="lazy">
                   <br />
                   <h5 class="h5 modal-title">Kai Nedir?</h5>
                   <p>
